Aula 01 - Introdução à análise de dados

--- a/data_analytics_with_python/lecture-01/lec-01.ipynb
+++ b/data_analytics_with_python/lecture-01/lec-01.ipynb
@@ -27,6 +27,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Classificação dos Tipos de Dados\n",
+    "\n",
+    "- Qualitativos\n",
+    "\n",
+    "    Pode ser:\n",
+    "    \n",
+    "        - Nominal\n",
+    "        - Ordinal\n",
+    "- Quantitativo\n",
+    "\n",
+    "    Pode ser\n",
+    "\n",
+    "        - Discreto\n",
+    "        - Contínuo\n",
+    "\n",
+    "    Ou\n",
+    "\n",
+    "        - Intervalar\n",
+    "        - Relacional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impacto da escolha da escala de medida\n",
+    "\n",
+    "<center>\n",
+    "    <table>\n",
+    "        <thead>\n",
+    "            <tr>\n",
+    "                <th>Escala</th>\n",
+    "                <th>Operações de medida</th>\n",
+    "                <th>Métodos Estatísticos</th>\n",
+    "            </tr>\n",
+    "        </thead>\n",
+    "        <tbody>\n",
+    "            <tr>\n",
+    "                <td>Nominal</td>\n",
+    "                <td>Classificação e Contagem</td>\n",
+    "                <td>Não-paramétricos</td>\n",
+    "            </tr>\n",
+    "            <!-- -->\n",
+    "            <tr>\n",
+    "                <td>Ordinal</td>\n",
+    "                <td>Todos acima e Ranqueamento</td>\n",
+    "                <td>Não-paramétricos</td>\n",
+    "            </tr>\n",
+    "            <!-- -->\n",
+    "            <tr>\n",
+    "                <td>Intevalar</td>\n",
+    "                <td>Todos acima mais Adição e Subtração</td>\n",
+    "                <td>Paramétricos</td>\n",
+    "            </tr>\n",
+    "            <!-- -->\n",
+    "            <tr>\n",
+    "                <td>Relacional</td>\n",
+    "                <td>Todos acima mais Multiplicação e Divsão</td>\n",
+    "                <td>Paramétricos</td>\n",
+    "            </tr>\n",
+    "        </tbody>\n",
+    "    </table>\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## *Data Analytics*\n",
     "\n"
    ]
