Distribuições de probabilidade - exercícios

--- a/data_analytics_with_python/lecture-11/python_demo_for_distribution.ipynb
+++ b/data_analytics_with_python/lecture-11/python_demo_for_distribution.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,13 @@
     "import numpy as np \n",
     "import matplotlib.pyplot as plt \n",
     "import scipy\n",
-    "from scipy.stats import binom\n"
+    "from scipy.stats import binom\n",
+    "from scipy.stats import poisson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](http://www.stat.yale.edu/Courses/1997-98/101/binpdf.gif)"
+    "### Distribuição binomial"
    ]
   },
   {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,13 +86,6 @@
     "p = binom.pmf(k=19, n=25, p=0.65)\n",
     "print(f\"A probabilidade é igual a {100 * p:.3f}%.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -116,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,23 +127,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribuição de Poisson"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Suponha que os clientes do banco cheguem aleatoriamente nas tardes dos dias úteis à media de 3,2 clientes a cada 4 minutos. Qual é a probabiliade de que exatamente 5 clientes cheguem em um intervalo de 4 minutos de uma tarde de dia útil?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "    P(X = x; \\lambda) = \\dfrac{\\lambda^x e^{-\\lambda}}{x!} &\\Rightarrow P(X = 5; \\lambda=3,2) = \\dfrac{3,2^5 e^{-3,2}}{5!}\\\\\n",
+    "    &\\Rightarrow P(X=5;\\lambda=3,2) = 0,1140\\\\\n",
+    "    &\\Rightarrow P(X=5;\\lambda=3,2) =  11,40%\n",
+    "\\end{align*}"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8850275957378542"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade é igual a 11.40%.\n"
+     ]
     }
    ],
    "source": [
-    "binom.pmf(2,20,0.06) + binom.pmf(1,20,0.06) + binom.pmf(0,20,0.06)"
+    "p = poisson.pmf(5, 3.2)\n",
+    "print(f\"A probabilidade é igual a {100 * p:.2f}%.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Clientes de um banco chegam aleatoriamente nas tardes dos dias úteis à media de 3,2 clientes a cada 4 minutos. Qual é a probabiliade de ter mais do que 7 clientes em um intervalo de 4 minutos de uma tarde de dia útil?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Clientes de um banco chegam aleatoriamente nas tardes dos dias úteis à media de 3,2 clientes a cada 4 minutos. Qual é a probabiliade de queexatamente 10 clientes cheguem em um intervalo de 8 minutos de uma tarde de dia útil?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "    P(X>7; \\lambda) &= 1 - P(X \\leq 7; \\lambda) = 1 - \\left(P(X=0;\\lambda) + P(X=1;\\lambda) + \\cdots + P(X=7;\\lambda)\\right)\\\\\n",
+    "    &= 1 - (0.04076 + 0.13044 + 0.2087 + 0.2226 0.1781 + 0.1140 + 0.0608 + 0.0278)\\\\\n",
+    "    &= 0,0168\\\\\n",
+    "    &= 1,68\\%\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade é igual a 1.68%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 1 - poisson.cdf(7, 3.2)\n",
+    "\n",
+    "print(f\"A probabilidade é igual a {100 * p:.2f}%.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\lambda$ = 3,2 clientes / 4 min. $\\Leftrightarrow$ 6,4 clientes / 8 min.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    P(X = x; \\lambda) = \\dfrac{\\lambda^x e^{-\\lambda}}{x!} &\\Rightarrow P(X = 10; \\lambda=6,4) = \\dfrac{6,4^{10} e^{-6,4}}{10!}\\\\\n",
+    "    &\\Rightarrow P(X=10;\\lambda=6,4) = 0,0528\\\\\n",
+    "    &\\Rightarrow P(X=10;\\lambda=6,4) =  5,28\\%\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade é igual a 5.28%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = poisson.pmf(10, 6.4)\n",
+    "print(f\"A probabilidade é igual a {100 * p:.2f}%.\")"
    ]
   },
   {
